--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9473c68f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.35f5c6b9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.68d488cc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.785c26b2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4c6998c9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.eb2c1267.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2e8cc813.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -67,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_1byq4l2 = {
+					__sveltekit_192rshe = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9473c68f.js"),
-						import("./_app/immutable/entry/app.4c6998c9.js")
+						import("./_app/immutable/entry/start.35f5c6b9.js"),
+						import("./_app/immutable/entry/app.eb2c1267.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
