--- a/order/index.html
+++ b/order/index.html
@@ -17,16 +17,16 @@
 		<link href="../_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.37c3d608.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.9473c68f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.35f5c6b9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.68d488cc.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.785c26b2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.4c6998c9.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.eb2c1267.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.2e8cc813.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.897c6e97.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.1143489b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/ResultsForm.fa866f54.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.473938e7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ResultsForm.3b7bbeb5.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
 <body data-sveltekit-preload-data="hover">
@@ -801,7 +801,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerhyvsZytQB1DACUYMCuLT4" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerytQL1uSsqYVrvEm7-CESc" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -960,13 +960,13 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainer5RrgLcy96pPCK02WQBem-" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerc9O8hh9ZZNA0Uhuxswcbh" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
 
 
-<input id="heightPiece" type="text" name="heightPiece"  required placeholder="Введите высоту полотна..." title="Введите высоту полотна..." value="3000" class="border border-gray-300 text-sm
+<input id="heightPiece" type="text" name="heightPiece"  required placeholder="Введите высоту полотна..." title="Введите высоту полотна..." value="2700" class="border border-gray-300 text-sm
                      focus:ring-primary-600 focus:border-primary-600 block
                      dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500
                       w-full text-gray-900 rounded-lg"></td>
@@ -1119,13 +1119,13 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerEnOp72RYzNGYfryjLVjrq" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainer0BokEZPw_ZlCUgGoH7BkM" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">4</th>
                         <td class="px-2 py-4">
 
 
-<input id="heightPiece" type="text" name="heightPiece"  required placeholder="Введите высоту полотна..." title="Введите высоту полотна..." value="3000" class="border border-gray-300 text-sm
+<input id="heightPiece" type="text" name="heightPiece"  required placeholder="Введите высоту полотна..." title="Введите высоту полотна..." value="2700" class="border border-gray-300 text-sm
                      focus:ring-primary-600 focus:border-primary-600 block
                      dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500
                       w-full text-gray-900 rounded-lg"></td>
@@ -1278,13 +1278,13 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainereebSqNElqm2vAwFkmK8LX" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainer5PiVWlyB48XyIOCWfLZfR" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">5</th>
                         <td class="px-2 py-4">
 
 
-<input id="heightPiece" type="text" name="heightPiece"  required placeholder="Введите высоту полотна..." title="Введите высоту полотна..." value="3000" class="border border-gray-300 text-sm
+<input id="heightPiece" type="text" name="heightPiece"  required placeholder="Введите высоту полотна..." title="Введите высоту полотна..." value="2500" class="border border-gray-300 text-sm
                      focus:ring-primary-600 focus:border-primary-600 block
                      dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500
                       w-full text-gray-900 rounded-lg"></td>
@@ -1437,7 +1437,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerSFI89yXWxrevuGEgc6kK4" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerWftqf8TvR2vqzfFgc1Z9Z" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1478,7 +1478,7 @@
 			
 			<script>
 				{
-					__sveltekit_1byq4l2 = {
+					__sveltekit_192rshe = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1488,8 +1488,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.9473c68f.js"),
-						import("../_app/immutable/entry/app.4c6998c9.js")
+						import("../_app/immutable/entry/start.35f5c6b9.js"),
+						import("../_app/immutable/entry/app.eb2c1267.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
